[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "httpx2>=2.5.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
]
